test/test-cases/negative/id_errors.pas
Program id_errors(input, output);
Const
  b = 1;
  a = bb;

Var
  a, x, x, y: integer;
    123 =
  a;
  ad = 999;
Begin
  x := 3 +;
  read(r, y)
End.
